more readability fixes
contact form updated with readability fix

--- a/style/baseStyle.less
+++ b/style/baseStyle.less
@@ -248,6 +248,10 @@ input,textarea,input:focus,textarea:focus
 		vertical-align:middle;
 		margin:0 20px 0 0;
 	}
+	background: rgba(0,0,0,0.5);
+	width: 500px;
+	margin: 0 auto;
+	padding: 10px;
 }
 .grayscale
 {
